--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
-.navBar{
+.navBar {
   background-color: rgb(149, 146, 146);
   height: 50px;
   width: 100%;
@@ -12,17 +12,28 @@ body{
   z-index: 100;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
-.navList{
+
+.navList {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  list-style: none; 
-  padding-right: 20px; 
+  list-style: none;
+  padding-right: 20px;
   gap: 20px;
 }
-a{
+a {
   text-decoration: none;
   color: white;
   font-size: 20px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(149, 146, 146);
+  padding-block: 10px;
 }
