--- a/src/style.css
+++ b/src/style.css
@@ -75,9 +75,22 @@ a {
 .name-icon {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 80px;
+  gap: 30px;
+  padding-inline: 20px;
+}
+
+.name-icon h3 {
+  width: 30%;
+}
+
+.name-icon div {
+  width: 30%;
+}
+
+.name-icon div :nth-child(1):hover {
+  color: red;
 }
 
 .likes {
@@ -113,4 +126,26 @@ footer {
   padding-left: 20px;
   background-color: rgba(10, 10, 10, 0.3);
   backdrop-filter: blur(20px);
+}
+
+@media (max-width: 860px) {
+  .movieList {
+    grid-template-columns: 40% 40%;
+    margin-top: 20%;
+  }
+
+  .name-icon {
+    justify-content: space-around;
+  }
+}
+
+@media (max-width: 550px) {
+  .movieList {
+    grid-template-columns: 80%;
+    margin-top: 30%;
+  }
+
+  .name-icon {
+    justify-content: space-around;
+  }
 }
