--- a/src/style.css
+++ b/src/style.css
@@ -116,24 +116,26 @@ footer {
 }
 
 .show {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   height: 80%;
   width: 80vw;
-
   /* padding-top: 500px; */
   background-color: rgb(104, 12, 12, 0.9);
   position: fixed;
-  top: 5vh;
-  left: 5vw;
+  top: 5vw;
+  left: 10vw;
+  bottom: 0;
+  right: 0;
   z-index: 1000;
   border-radius: 10px;
   overflow-y: scroll;
   color: antiquewhite;
   text-align: center;
 }
+
 
 .hide {
   display: none;
@@ -162,6 +164,8 @@ footer {
   justify-content: space-between;
   align-items: center;
   gap: 20px;
+  padding: 20px;
+
 }
 
 .popContentLoad img {
@@ -202,6 +206,26 @@ footer {
   background-color: rgb(104, 12, 12);
   color: white;
   cursor: pointer;
+}
+
+.commentContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  max-width: fit-content;  
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+.commentItem{
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+  gap: 10px;  
+  padding: 10px;  
+  border-radius: 10px;  
 }
 
 .submitComment:hover {
