--- a/src/style.css
+++ b/src/style.css
@@ -214,7 +214,8 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 20px;
-  max-width: fit-content;  
+  /* padding: 20px; */
+  margin: 10px;          
   border: 1px solid white;
   border-radius: 10px;
 }
@@ -222,9 +223,8 @@ footer {
 .commentItem{
   display: flex;  
   justify-content: center;
-  align-items: center;
-  gap: 10px;  
-  padding: 10px;  
+  align-items: center;   
+  gap: 20px;
   border-radius: 10px;  
 }
 
