--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ body {
   align-items: center;
   list-style: none;
   padding-right: 20px;
-  gap: 20px;
+  gap: 60px;
 }
 
 a {
@@ -97,6 +97,7 @@ a {
   align-self: flex-end;
   padding-right: 4%;
   margin-block: 0;
+  font-style: italic;
 }
 
 .genre-lang {
